syntax = "proto3";

package family;

option go_package = "github.com/apriliantocecep/family-service-gabungin/pkg/pb";

service FamilyService {
    rpc Create (CreateRequest) returns (CreateResponse);
    rpc Read (ReadRequest) returns (ReadResponse);
    rpc Update (UpdateRequest) returns (UpdateResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
    rpc GetDataFamily (GetDataFamilyRequest) returns (GetDataFamilyResponse);
}

message DataFamily {
    uint32 id = 1;
    int64 user_id = 2;
    uint32 parent_id = 3;
    string name = 4;
    string gender = 5;
    int32 order = 6;
}

message CreateRequest {
    DataFamily data = 1;
}

message CreateResponse {
    int64 status = 1;
    string error = 2;
    int64 id = 3;
}

message ReadRequest {
    int64 id = 1;
}

message ReadResponse {
    int64 status = 1;
    string error = 2;
    DataFamily data = 3;
}

message UpdateRequest {
    int64 id = 1;
    DataFamily data = 2;
}

message UpdateResponse {
    int64 status = 1;
    string error = 2;
    DataFamily data = 3;
}

message DeleteRequest {
    int64 id = 1;
}

message DeleteResponse {
    int64 status = 1;
    string error = 2;
    DataFamily data = 3;
}

message GetDataFamilyRequest {
    int64 user_id = 1;
    uint32 id = 2;
}

message GetDataFamilyResponse {
    int64 status = 1;
    string error = 2;
    repeated DataFamily data = 3;
}